#820 - better translation names for letter A, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -88,17 +88,17 @@ online_storage_change_account.name=Ändern
 online_storage_change_account.key=Ä
 online_storage_change_account.description=Ändert den Login zum Online Speicher
 
-abortcopy.description=Bricht den Kopiervorgang ab
-abortcopy.key=A
-abortcopy.name=Abbrechen
+abort_copy.description=Bricht den Kopiervorgang ab
+abort_copy.key=A
+abort_copy.name=Abbrechen
 
-abortdownload.description=Bricht die gew\u00e4hlten Downloads ab und l\u00f6scht sie aus der Warteschlange
-abortdownload.key=a
-abortdownload.name=Abbrechen
+abort_download.description=Bricht die gew\u00e4hlten Downloads ab und l\u00f6scht sie aus der Warteschlange
+abort_download.key=a
+abort_download.name=Abbrechen
 
-aborttransfer.description=Bricht den ausgew\u00e4hlten Transfer ab
-aborttransfer.key=a
-aborttransfer.name=Transfer abbrechen
+abort_transfer.description=Bricht den ausgew\u00e4hlten Transfer ab
+abort_transfer.key=a
+abort_transfer.name=Transfer abbrechen
 
 about.description=Zeigt Informationen \u00fcber PowerFolder an
 about.dialog.check_for_updates=Updates suchen
@@ -106,9 +106,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Mitarbeiter
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
-about.dialog.homepage=Homepage
-about.dialog.power_folder.builddate=Build datum\: {0}
-about.dialog.power_folder.buildtime=Build Zeit\: {0}
+about.dialog.home_page=Homepage
+about.dialog.power_folder.build_date=Build datum\: {0}
+about.dialog.power_folder.build_time=Build Zeit\: {0}
 about.dialog.power_folder.max=Speicher (max)\: {0}MB
 about.dialog.power_folder.text=Version\: {0}
 about.dialog.power_folder.used=Speicher (benutzt)\: {0}MB
@@ -120,28 +120,28 @@ about.dialog.team=Team
 about.dialog.testers=Tester
 about.dialog.title=\u00dcber PowerFolder
 about.dialog.translators=\u00dcbersetzer
-about.dialog.yoursystem.java_version=Java Version\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Aufl\u00f6sung\: {0}x{1}
-about.dialog.yoursystem.title=Ihr System
+about.dialog.your_system.java_version=Java Version\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=Aufl\u00f6sung\: {0}x{1}
+about.dialog.your_system.title=Ihr System
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
 about.key=h
 about.name=Hilfe
 
-aboutwebservice.description=\u00d6ffnet den Online Speicher im Webbrowser
-aboutwebservice.key=B
-aboutwebservice.name=\u00dcber Online Speicher
+about_web_service.description=\u00d6ffnet den Online Speicher im Webbrowser
+about_web_service.key=B
+about_web_service.name=\u00dcber Online Speicher
 
-addfriend.description=F\u00fcgt einen Nutzer zur Freundesliste hinzu
-addfriend.key=f
-addfriend.name=Freund hinzuf\u00fcgen
+add_friend.description=F\u00fcgt einen Nutzer zur Freundesliste hinzu
+add_friend.key=f
+add_friend.name=Freund hinzuf\u00fcgen
 
-addmodifierfriend.description=F\u00fcgt den Bearbeiter der Datei zur Freundesliste hinzu
-addmodifierfriend.key=f
-addmodifierfriend.name=Freund hinzuf\u00fcgen
+add_modifier_friend.description=F\u00fcgt den Bearbeiter der Datei zur Freundesliste hinzu
+add_modifier_friend.key=f
+add_modifier_friend.name=Freund hinzuf\u00fcgen
 
-addressEditor.parseerror=<html>Bitte geben Sie die IP-Adressen des LANs ein, G\u00fcltige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Bitte geben Sie die IP-Adressen des LANs ein, G\u00fcltige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=LAN-IP-Bereich
 
 apps.dir.firefox=Firefox
