--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Aborta el proceso de copia
-abortcopy.key=A
-abortcopy.name=Abortar
+abort_copy.description=Aborta el proceso de copia
+abort_copy.key=A
+abort_copy.name=Abortar
 
-abortdownload.description=Cancela las descargas seleccionadas y las elimina de la cola de descargas
-abortdownload.key=a
-abortdownload.name=Cancelar
+abort_download.description=Cancela las descargas seleccionadas y las elimina de la cola de descargas
+abort_download.key=a
+abort_download.name=Cancelar
 
-aborttransfer.description=Anular la transferencia seleccionada
-aborttransfer.key=a
-aborttransfer.name=Anular transferencia(s)
+abort_transfer.description=Anular la transferencia seleccionada
+abort_transfer.key=a
+abort_transfer.name=Anular transferencia(s)
 
 about.description=Muestra informaci\u00F3n acerca de PowerFolder
 about.dialog.check_for_updates=Comprobar Actualizaciones
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Colaboladores
 about.dialog.documentation=Documentaci\u00F3n
 about.dialog.general_information=Informaci\u00F3n General
-about.dialog.homepage=P\u00E1gina de Inicio
-about.dialog.power_folder.builddate=Build date\: {0}
-about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.home_page=P\u00E1gina de Inicio
+about.dialog.power_folder.build_date=Build date\: {0}
+about.dialog.power_folder.build_time=Build time\: {0}
 about.dialog.power_folder.max=M\u00E1ximo de memoria\: {0}MB
 about.dialog.power_folder.text=Versi\u00F3n\: {0}
 about.dialog.power_folder.used=Memoria usada\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=Equipo
 about.dialog.testers=Testers
 about.dialog.title=Acerca de PowerFolder
 about.dialog.translators=Traductores
-about.dialog.yoursystem.java_version=Versi\u00F3n de Java\: {0}
-about.dialog.yoursystem.os=SO\: {0}
-about.dialog.yoursystem.screen=Resoluci\u00F3n de Pantalla\: {0}x{1}
-about.dialog.yoursystem.title=Su Sistema
+about.dialog.your_system.java_version=Versi\u00F3n de Java\: {0}
+about.dialog.your_system.os=SO\: {0}
+about.dialog.your_system.screen=Resoluci\u00F3n de Pantalla\: {0}x{1}
+about.dialog.your_system.title=Su Sistema
 about.dialog_about_tab=acerca
 about.dialog_contributers_tab=equipo
 about.key=h
 about.name=Ayuda
 
-aboutwebservice.description=Abre tu Almac\u00E9n en linea en tu browser(default)
-aboutwebservice.key=A
-aboutwebservice.name=Acerca Almacen en linea
+about_web_service.description=Abre tu Almac\u00E9n en linea en tu browser(default)
+about_web_service.key=A
+about_web_service.name=Acerca Almacen en linea
 
-addfriend.description=A\u00F1adir usuario a la lista de amigos
-addfriend.key=f
-addfriend.name=A\u00F1adir a Amigos
+add_friend.description=A\u00F1adir usuario a la lista de amigos
+add_friend.key=f
+add_friend.name=A\u00F1adir a Amigos
 
-addmodifierfriend.description=A\u00F1ade el modificador del archivo a la lista de amigos
-addmodifierfriend.key=f
-addmodifierfriend.name=A\u00F1adir Modificador de Archivo a Amigos
+add_modifier_friend.description=A\u00F1ade el modificador del archivo a la lista de amigos
+add_modifier_friend.key=f
+add_modifier_friend.name=A\u00F1adir Modificador de Archivo a Amigos
 
-addressEditor.parseerror=<html>Por favor ingrese los IPs a ser considerados en LAN, entradas v\u00E1lidas son\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Por favor ingrese los IPs a ser considerados en LAN, entradas v\u00E1lidas son\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Rango-IP
 
 apps.dir.firefox=Firefox
