--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Termina il processo di copia
-abortcopy.key=T
-abortcopy.name=Termina
+abort_copy.description=Termina il processo di copia
+abort_copy.key=T
+abort_copy.name=Termina
 
-abortdownload.description=Interrompe il download selezionato e lo toglie dalla coda di download
-abortdownload.key=I
-abortdownload.name=Interrompi
+abort_download.description=Interrompe il download selezionato e lo toglie dalla coda di download
+abort_download.key=I
+abort_download.name=Interrompi
 
-aborttransfer.description=Interrompi il trasferimento selezionato
-aborttransfer.key=T
-aborttransfer.name=Interrompi il trasferimento(s)
+abort_transfer.description=Interrompi il trasferimento selezionato
+abort_transfer.key=T
+abort_transfer.name=Interrompi il trasferimento(s)
 
 about.description=Mostra informazioni riguardo PowerFolder
 about.dialog.check_for_updates=Controlla gli aggiornamenti
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Collaboratori
 about.dialog.documentation=Documentazione
 about.dialog.general_information=Informazioni generali
-about.dialog.homepage=Homepage
-about.dialog.power_folder.builddate=Data di build\: {0}
-about.dialog.power_folder.buildtime=Ora di build\: {0}
+about.dialog.home_page=Homepage
+about.dialog.power_folder.build_date=Data di build\: {0}
+about.dialog.power_folder.build_time=Ora di build\: {0}
 about.dialog.power_folder.max=Memoria max.\: {0}MB
 about.dialog.power_folder.text=Versione\: {0}
 about.dialog.power_folder.used=Memoria utilizzata\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=About PowerFolder
 about.dialog.translators=Traduttori
-about.dialog.yoursystem.java_version=Versione di Java\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Schermo\: {0}x{1}
-about.dialog.yoursystem.title=Il tuo sistema
+about.dialog.your_system.java_version=Versione di Java\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=Schermo\: {0}x{1}
+about.dialog.your_system.title=Il tuo sistema
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 about.key=A
 about.name=Aiuto
 
-aboutwebservice.description=Apre l'Online Storage nel default browser
-aboutwebservice.key=A
-aboutwebservice.name=About Online Storage
+about_web_service.description=Apre l'Online Storage nel default browser
+about_web_service.key=A
+about_web_service.name=About Online Storage
 
-addfriend.description=Aggiungi un utente agli amici
-addfriend.key=A
-addfriend.name=Aggiungi agli amici
+add_friend.description=Aggiungi un utente agli amici
+add_friend.key=A
+add_friend.name=Aggiungi agli amici
 
-addmodifierfriend.description=Aggiunge chi ha modificato il file agli amici
-addmodifierfriend.key=f
-addmodifierfriend.name=Aggiungi chi ha modificato agli amici
+add_modifier_friend.description=Aggiunge chi ha modificato il file agli amici
+add_modifier_friend.key=f
+add_modifier_friend.name=Aggiungi chi ha modificato agli amici
 
-addressEditor.parseerror=<html>Si prega di inserire gli IP da considerare nella LAN, inputs validi sono\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Si prega di inserire gli IP da considerare nella LAN, inputs validi sono\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Intervalli-IP
 
 apps.dir.firefox=Firefox
