--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Kopi\u00ebren afbreken
-abortcopy.key=S
-abortcopy.name=Stop
+abort_copy.description=Kopi\u00ebren afbreken
+abort_copy.key=S
+abort_copy.name=Stop
 
-abortdownload.description=Breekt de geselecteerde download af en verwijdert het uit de wachtrij
-abortdownload.key=A
-abortdownload.name=Afbreken
+abort_download.description=Breekt de geselecteerde download af en verwijdert het uit de wachtrij
+abort_download.key=A
+abort_download.name=Afbreken
 
-aborttransfer.description=Breekt de geselecteerde transfer af
-aborttransfer.key=B
-aborttransfer.name=Breek transfer af
+abort_transfer.description=Breekt de geselecteerde transfer af
+abort_transfer.key=B
+abort_transfer.name=Breek transfer af
 
 about.description=Toont informatie over PowerFolder
 about.dialog.check_for_updates=Zoek naar updates
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=Z
 about.dialog.contributers=Medewerkers
 about.dialog.documentation=Documentatie
 about.dialog.general_information=Algemene Informatie
-about.dialog.homepage=Homepage
-about.dialog.power_folder.builddate=Gemaakt op\: {0}
-about.dialog.power_folder.buildtime=om\: {0}
+about.dialog.home_page=Homepage
+about.dialog.power_folder.build_date=Gemaakt op\: {0}
+about.dialog.power_folder.build_time=om\: {0}
 ##about.dialog.power_folder.max=Max memory\: {0}MB
 about.dialog.power_folder.text=Versie\: {0}
 ##about.dialog.power_folder.used=Used memory\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=Over PowerFolder
 about.dialog.translators=Vertalers
-about.dialog.yoursystem.java_version=Java versie\: {0}
-about.dialog.yoursystem.os=BS\: {0}
-about.dialog.yoursystem.screen=Scherm\: {0}x{1}
-about.dialog.yoursystem.title=Uw systeem
+about.dialog.your_system.java_version=Java versie\: {0}
+about.dialog.your_system.os=BS\: {0}
+about.dialog.your_system.screen=Scherm\: {0}x{1}
+about.dialog.your_system.title=Uw systeem
 about.dialog_about_tab=Over
 about.dialog_contributers_tab=Team
 about.key=h
 about.name=Help
 
-##aboutwebservice.description=Opens the Online Storage in default browser
-##aboutwebservice.key=A
-##aboutwebservice.name=About Online Storage
+##about_web_service.description=Opens the Online Storage in default browser
+##about_web_service.key=A
+##about_web_service.name=About Online Storage
 
-addfriend.description=Voegt gebruiker toe aan de vriendenlijst
-addfriend.key=T
-addfriend.name=Toevoegen aan vrienden
+add_friend.description=Voegt gebruiker toe aan de vriendenlijst
+add_friend.key=T
+add_friend.name=Toevoegen aan vrienden
 
-addmodifierfriend.description=Voeg bewerker van bestand toe aan vriendenlijst
-addmodifierfriend.key=f
-addmodifierfriend.name=Maak bewerker vriend
+add_modifier_friend.description=Voeg bewerker van bestand toe aan vriendenlijst
+add_modifier_friend.key=f
+add_modifier_friend.name=Maak bewerker vriend
 
-addressEditor.parseerror=<html>Geef de IPs in die op het LAN zitten, geldige ingave\:<br>xxx.xxx.xxx.xxx of<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Geef de IPs in die op het LAN zitten, geldige ingave\:<br>xxx.xxx.xxx.xxx of<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Reeks
 
 ##apps.dir.firefox=Firefox
