--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Anuluj kopiowanie
-abortcopy.key=A
-abortcopy.name=Anuluj
+abort_copy.description=Anuluj kopiowanie
+abort_copy.key=A
+abort_copy.name=Anuluj
 
-abortdownload.description=Anuluje zaznaczone pobierania i usuwa je z kolejki
-abortdownload.key=a
-abortdownload.name=Anuluj
+abort_download.description=Anuluje zaznaczone pobierania i usuwa je z kolejki
+abort_download.key=a
+abort_download.name=Anuluj
 
-aborttransfer.description=Przerywa zaznaczony transfer
-aborttransfer.key=a
-aborttransfer.name=Anuluj transfer
+abort_transfer.description=Przerywa zaznaczony transfer
+abort_transfer.key=a
+abort_transfer.name=Anuluj transfer
 
 about.description=Informacje o PowerFolder
 about.dialog.check_for_updates=Sprawd\u017a aktualizacje
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Wsp\u00f3\u0142tw\u00f3rcy
 about.dialog.documentation=Dokumentacja
 about.dialog.general_information=Og\u00f3lne Informacje
-about.dialog.homepage=Strona Domowa
-about.dialog.power_folder.builddate=Data kompilacji\: {0}
-about.dialog.power_folder.buildtime=Godzina kompilacji\: {0}
+about.dialog.home_page=Strona Domowa
+about.dialog.power_folder.build_date=Data kompilacji\: {0}
+about.dialog.power_folder.build_time=Godzina kompilacji\: {0}
 about.dialog.power_folder.max=Dost\u0119pna pami\u0119\u0107\: {0}MB
 about.dialog.power_folder.text=Wersja\: {0}
 about.dialog.power_folder.used=U\u017cyta pami\u0119\u0107\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=Team
 about.dialog.testers=Testerzy
 about.dialog.title=O Programie PowerFolder
 about.dialog.translators=T\u0142umaczenia
-about.dialog.yoursystem.java_version=Wersja Javy\: {0}
-about.dialog.yoursystem.os=System Operacyjny\: {0}
-about.dialog.yoursystem.screen=Ekran\: {0}x{1}
-about.dialog.yoursystem.title=Tw\u00f3j System
+about.dialog.your_system.java_version=Wersja Javy\: {0}
+about.dialog.your_system.os=System Operacyjny\: {0}
+about.dialog.your_system.screen=Ekran\: {0}x{1}
+about.dialog.your_system.title=Tw\u00f3j System
 about.dialog_about_tab=O programie
 about.dialog_contributers_tab=Team
 about.key=h
 about.name=Pomoc
 
-aboutwebservice.description=Otwiera Archiwum Online  w domy\u015blnej przegl\u0105darce
-aboutwebservice.key=A
-aboutwebservice.name=O Archiwum Online
+about_web_service.description=Otwiera Archiwum Online  w domy\u015blnej przegl\u0105darce
+about_web_service.key=A
+about_web_service.name=O Archiwum Online
 
-addfriend.description=Dodaje u\u017cytkownika do listy znajomych
-addfriend.key=f
-addfriend.name=Dodaj do Znajomych
+add_friend.description=Dodaje u\u017cytkownika do listy znajomych
+add_friend.key=f
+add_friend.name=Dodaj do Znajomych
 
-addmodifierfriend.description=Dodaje u\u017cytkownika, kt\u00f3ry zmodyfikowa\u0142 plik do listy znajomych
-addmodifierfriend.key=f
-addmodifierfriend.name=Dodaj U\u017cytkownika, kt\u00f3ry zmodyfikowa\u0142 plik do Listy Znajomych
+add_modifier_friend.description=Dodaje u\u017cytkownika, kt\u00f3ry zmodyfikowa\u0142 plik do listy znajomych
+add_modifier_friend.key=f
+add_modifier_friend.name=Dodaj U\u017cytkownika, kt\u00f3ry zmodyfikowa\u0142 plik do Listy Znajomych
 
-addressEditor.parseerror=<html>Podaj zakres adres\u00f3w IP w sieci LAN, mo\u017cliwe adresy maj\u0105 posta\u0107\:<br>xxx.xxx.xxx.xxx lub<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Podaj zakres adres\u00f3w IP w sieci LAN, mo\u017cliwe adresy maj\u0105 posta\u0107\:<br>xxx.xxx.xxx.xxx lub<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Zakres IP
 
 apps.dir.firefox=Firefox
