--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Cancelar o processo de c\u00f3pia
-abortcopy.key=C
-abortcopy.name=Cancelar
+abort_copy.description=Cancelar o processo de c\u00f3pia
+abort_copy.key=C
+abort_copy.name=Cancelar
 
-abortdownload.description=Cancela as baixas selecionadas e remove-as da fila de arquivos a baixar
-abortdownload.key=c
-abortdownload.name=Cancelar
+abort_download.description=Cancela as baixas selecionadas e remove-as da fila de arquivos a baixar
+abort_download.key=c
+abort_download.name=Cancelar
 
-aborttransfer.description=Cancela a transfer\u00eancia selecionada
-aborttransfer.key=c
-aborttransfer.name=Cancelar Transfer\u00eancia(s)
+abort_transfer.description=Cancela a transfer\u00eancia selecionada
+abort_transfer.key=c
+abort_transfer.name=Cancelar Transfer\u00eancia(s)
 
 about.description=Mostra informa\u00e7\u00e3o sobre PowerFolder
 about.dialog.check_for_updates=Verificar Atualiza\u00e7\u00f5es
@@ -37,7 +37,7 @@ about.dialog.check_for_updates.key=V
 about.dialog.contributers=Colaboradores
 about.dialog.documentation=Documenta\u00e7\u00e3o
 about.dialog.general_information=Informa\u00e7\u00f5es gerais
-about.dialog.homepage=Homepage
+about.dialog.home_page=Homepage
 about.dialog.professional_folder_sharing_tool=Sincronize, acesse, compartilhe e fa\u00e7a backup\nfac\u00edlmente
 about.dialog.send_bug_report=Enviar Relat\u00f3rio de Erros
 about.dialog.send_bug_report.key=E
@@ -50,30 +50,30 @@ about.dialog.version.builddate=Data do Build\: {0}
 about.dialog.version.buildtime=Hor\u00e1rio do Build\: {0}
 about.dialog.version.text=Vers\u00e3o\: {0}
 about.dialog.version.title=Vers\u00e3o
-about.dialog.yoursystem.java_version=Vers\u00e3o do Java\: {0}
-about.dialog.yoursystem.max=Mem\u00f3ria M\u00e1xima\: {0}MB
-about.dialog.yoursystem.os=SO\: {0}
-about.dialog.yoursystem.screen=Resolu\u00e7\u00e3o do Monitor\: {0}x{1}
-about.dialog.yoursystem.title=Seu Sistema
-about.dialog.yoursystem.used=Mem\u00f3ria Utilizada\: {0}MB
+about.dialog.your_system.java_version=Vers\u00e3o do Java\: {0}
+about.dialog.your_system.max=Mem\u00f3ria M\u00e1xima\: {0}MB
+about.dialog.your_system.os=SO\: {0}
+about.dialog.your_system.screen=Resolu\u00e7\u00e3o do Monitor\: {0}x{1}
+about.dialog.your_system.title=Seu Sistema
+about.dialog.your_system.used=Mem\u00f3ria Utilizada\: {0}MB
 about.dialog_about_tab=sobre
 about.dialog_contributers_tab=equipe
 about.key=a
 about.name=Ajuda
 
-aboutwebservice.description=Abre o armazenamento online no navegador padr\u00e3o
-aboutwebservice.key=S
-aboutwebservice.name=Sobre Armazenamento Online
+about_web_service.description=Abre o armazenamento online no navegador padr\u00e3o
+about_web_service.key=S
+about_web_service.name=Sobre Armazenamento Online
 
-addfriend.description=Adiciona usu\u00e1rio \u00e0 lista de amigos
-addfriend.key=a
-addfriend.name=Adicionar em Amigos
+add_friend.description=Adiciona usu\u00e1rio \u00e0 lista de amigos
+add_friend.key=a
+add_friend.name=Adicionar em Amigos
 
-addmodifierfriend.description=Adiciona modificador de arquivo \u00e0 lista de amigos
-addmodifierfriend.key=a
-addmodifierfriend.name=Adicionar modificador de arquivo em Amigos
+add_modifier_friend.description=Adiciona modificador de arquivo \u00e0 lista de amigos
+add_modifier_friend.key=a
+add_modifier_friend.name=Adicionar modificador de arquivo em Amigos
 
-addressEditor.parseerror=<html>Por favor entre o(s) IP(s) a serem consideredos na Rede, valores v\u00e1lidos s\u00e3o\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Por favor entre o(s) IP(s) a serem consideredos na Rede, valores v\u00e1lidos s\u00e3o\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Intervalo-IP
 
 apps.dir.firefox=Firefox
