--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Avbryt kopieringen
-abortcopy.key=A
-abortcopy.name=Avbryt
+abort_copy.description=Avbryt kopieringen
+abort_copy.key=A
+abort_copy.name=Avbryt
 
-abortdownload.description=Avbryter valda nedladdningar och tar bort dem fr\u00e5n nedladdningsk\u00f6n.
-abortdownload.key=a
-abortdownload.name=Avbryt
+abort_download.description=Avbryter valda nedladdningar och tar bort dem fr\u00e5n nedladdningsk\u00f6n.
+abort_download.key=a
+abort_download.name=Avbryt
 
-aborttransfer.description=Avbryter den valda \u00f6verf\u00f6ringen
-aborttransfer.key=a
-aborttransfer.name=Avbryt \u00f6verf\u00f6ring(ar)
+abort_transfer.description=Avbryter den valda \u00f6verf\u00f6ringen
+abort_transfer.key=a
+abort_transfer.name=Avbryt \u00f6verf\u00f6ring(ar)
 
 about.description=Visar information om PowerFolder
 about.dialog.check_for_updates=S\u00f6k efter uppdateringar
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Medverkande
 about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allm\u00e4n information
-about.dialog.homepage=Hemsida
-about.dialog.power_folder.builddate=Skapad datum\: {0}
-about.dialog.power_folder.buildtime=Skapad kl\: {0}
+about.dialog.home_page=Hemsida
+about.dialog.power_folder.build_date=Skapad datum\: {0}
+about.dialog.power_folder.build_time=Skapad kl\: {0}
 ##about.dialog.power_folder.max=Max memory\: {0}MB
 about.dialog.power_folder.text=Version\: {0}
 ##about.dialog.power_folder.used=Used memory\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=Team
 about.dialog.testers=Testare
 about.dialog.title=Om PowerFolder
 about.dialog.translators=\u00d6vers\u00e4ttare
-about.dialog.yoursystem.java_version=Java Version\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Bildsk\u00e4rm\: {0}x{1}
-about.dialog.yoursystem.title=Ditt system
+about.dialog.your_system.java_version=Java Version\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=Bildsk\u00e4rm\: {0}x{1}
+about.dialog.your_system.title=Ditt system
 about.dialog_about_tab=om
 about.dialog_contributers_tab=team
 about.key=h
 about.name=Hj\u00e4lp
 
-##aboutwebservice.description=Opens the Online Storage in default browser
-##aboutwebservice.key=A
-##aboutwebservice.name=About Online Storage
+##about_web_service.description=Opens the Online Storage in default browser
+##about_web_service.key=A
+##about_web_service.name=About Online Storage
 
-addfriend.description=L\u00e4gg till anv\u00e4ndaren i listan med v\u00e4nner
-addfriend.key=L
-addfriend.name=L\u00e4gg till som v\u00e4n
+add_friend.description=L\u00e4gg till anv\u00e4ndaren i listan med v\u00e4nner
+add_friend.key=L
+add_friend.name=L\u00e4gg till som v\u00e4n
 
-addmodifierfriend.description=L\u00e4gg in den som \u00e4ndrat filen i listan med v\u00e4nner
-addmodifierfriend.key=f
-addmodifierfriend.name=L\u00e4gg till den som \u00e4ndrat som v\u00e4n
+add_modifier_friend.description=L\u00e4gg in den som \u00e4ndrat filen i listan med v\u00e4nner
+add_modifier_friend.key=f
+add_modifier_friend.name=L\u00e4gg till den som \u00e4ndrat som v\u00e4n
 
-addressEditor.parseerror=<html>Ange IPs som finns p\u00e5 ert LAN, p\u00e5 format\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Ange IPs som finns p\u00e5 ert LAN, p\u00e5 format\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Omr\u00e5de
 
 ##apps.dir.firefox=Firefox
