--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=\u53d6\u6d88\u590d\u5236
-abortcopy.key=A
-abortcopy.name=\u53d6\u6d88
+abort_copy.description=\u53d6\u6d88\u590d\u5236
+abort_copy.key=A
+abort_copy.name=\u53d6\u6d88
 
-abortdownload.description=\u53d6\u6d88\u4e0b\u8f7d\u5e76\u4ece\u961f\u5217\u4e2d\u79fb\u9664
-abortdownload.key=a
-abortdownload.name=\u53d6\u6d88
+abort_download.description=\u53d6\u6d88\u4e0b\u8f7d\u5e76\u4ece\u961f\u5217\u4e2d\u79fb\u9664
+abort_download.key=a
+abort_download.name=\u53d6\u6d88
 
-aborttransfer.description=\u53d6\u6d88\u9009\u5b9a\u7684\u4f20\u8f93
-aborttransfer.key=a
-aborttransfer.name=\u53d6\u6d88\u4f20\u8f93
+abort_transfer.description=\u53d6\u6d88\u9009\u5b9a\u7684\u4f20\u8f93
+abort_transfer.key=a
+abort_transfer.name=\u53d6\u6d88\u4f20\u8f93
 
 about.description=\u5173\u4e8ePowerFolder
 about.dialog.check_for_updates=\u68c0\u67e5\u66f4\u65b0
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=\u8d21\u732e\u8005
 about.dialog.documentation=\u6587\u6863
 about.dialog.general_information=\u901a\u7528\u4fe1\u606f
-about.dialog.homepage=\u9996\u9875
-about.dialog.power_folder.builddate=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
-about.dialog.power_folder.buildtime=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
+about.dialog.home_page=\u9996\u9875
+about.dialog.power_folder.build_date=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
+about.dialog.power_folder.build_time=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
 about.dialog.power_folder.max=\u6700\u5927\u5185\u5b58\: {0}MB
 about.dialog.power_folder.text=\u7248\u672c\uff1a{0}
 about.dialog.power_folder.used=\u5df2\u7528\u5185\u5b58\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=\u5f00\u53d1\u56e2\u961f
 about.dialog.testers=\u6d4b\u8bd5\u4eba\u5458
 about.dialog.title=\u5173\u4e8ePowerFolder
 about.dialog.translators=\u7ffb\u8bd1\u4eba\u5458
-about.dialog.yoursystem.java_version=Java\u7248\u672c\uff1a {0}
-about.dialog.yoursystem.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a{0}
-about.dialog.yoursystem.screen=\u5206\u8fa8\u7387\uff1a {0}x{1}
-about.dialog.yoursystem.title=\u5f53\u524d\u7cfb\u7edf
+about.dialog.your_system.java_version=Java\u7248\u672c\uff1a {0}
+about.dialog.your_system.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a{0}
+about.dialog.your_system.screen=\u5206\u8fa8\u7387\uff1a {0}x{1}
+about.dialog.your_system.title=\u5f53\u524d\u7cfb\u7edf
 about.dialog_about_tab=\u5173\u4e8e
 about.dialog_contributers_tab=\u56e2\u961f
 about.key=h
 about.name=\u5e2e\u52a9
 
-aboutwebservice.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
-aboutwebservice.key=A
-aboutwebservice.name=\u5173\u4e8e\u7f51\u7edc\u670d\u52a1
+about_web_service.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
+about_web_service.key=A
+about_web_service.name=\u5173\u4e8e\u7f51\u7edc\u670d\u52a1
 
-addfriend.description=\u6dfb\u52a0\u597d\u53cb\u5230\u5217\u8868
-addfriend.key=f
-addfriend.name=\u6dfb\u52a0\u597d\u53cb
+add_friend.description=\u6dfb\u52a0\u597d\u53cb\u5230\u5217\u8868
+add_friend.key=f
+add_friend.name=\u6dfb\u52a0\u597d\u53cb
 
-addmodifierfriend.description=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868
-addmodifierfriend.key=f
-addmodifierfriend.name=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u4e3a\u597d\u53cb
+add_modifier_friend.description=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868
+add_modifier_friend.key=f
+add_modifier_friend.name=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u4e3a\u597d\u53cb
 
-addressEditor.parseerror=<html>\u8bf7\u8f93\u5165\u5c40\u57df\u7f51IP\uff0c\u6b63\u786e\u7684\u8f93\u5165\u683c\u5f0f\:<br>xxx.xxx.xxx.xxx \u6216<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>\u8bf7\u8f93\u5165\u5c40\u57df\u7f51IP\uff0c\u6b63\u786e\u7684\u8f93\u5165\u683c\u5f0f\:<br>xxx.xxx.xxx.xxx \u6216<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-\u8303\u56f4
 
 apps.dir.firefox=Firefox
