--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -31,17 +31,17 @@ pro.process_order.description=
 pro.process_order.key=O
 pro.process_order.name=Process order
 
-abortcopy.description=Abort the copy process
-abortcopy.key=A
-abortcopy.name=Abort
+abort_copy.description=Abort the copy process
+abort_copy.key=A
+abort_copy.name=Abort
 
-abortdownload.description=Aborts the selected downloads and removes them from the download queue
-abortdownload.key=a
-abortdownload.name=Abort
+abort_download.description=Aborts the selected downloads and removes them from the download queue
+abort_download.key=a
+abort_download.name=Abort
 
-aborttransfer.description=Aborts the selected transfer
-aborttransfer.key=a
-aborttransfer.name=Abort Transfer(s)
+abort_transfer.description=Aborts the selected transfer
+abort_transfer.key=a
+abort_transfer.name=Abort Transfer(s)
 
 about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check For Updates
@@ -49,7 +49,7 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=Contributors
 about.dialog.documentation=Documentation
 about.dialog.general_information=General Information
-about.dialog.homepage=Homepage
+about.dialog.home_page=Homepage
 about.dialog.sync_your_world=Sync your World
 about.dialog.send_bug_report=Send Bug Report
 about.dialog.send_bug_report.key=B
@@ -58,33 +58,33 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=About PowerFolder
 about.dialog.translators=Translators
-about.dialog.power_folder.builddate=Build date\: {0}
-about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.power_folder.build_date=Build date\: {0}
+about.dialog.power_folder.build_time=Build time\: {0}
 about.dialog.power_folder.text=Version\: {0}
 about.dialog.power_folder.max=Max memory\: {0}MB
 about.dialog.power_folder.used=Used memory\: {0}MB
-about.dialog.yoursystem.java_version=Java version\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Screen\: {0}x{1}
-about.dialog.yoursystem.title=Your System
+about.dialog.your_system.java_version=Java version\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=Screen\: {0}x{1}
+about.dialog.your_system.title=Your System
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 about.key=h
 about.name=Help
 
-aboutwebservice.description=Opens the Online Storage in default browser
-aboutwebservice.key=A
-aboutwebservice.name=About Online Storage
+about_web_service.description=Opens the Online Storage in default browser
+about_web_service.key=A
+about_web_service.name=About Online Storage
 
-addfriend.description=Adds user to friend list
-addfriend.key=f
-addfriend.name=Add To Friends
+add_friend.description=Adds user to friend list
+add_friend.key=f
+add_friend.name=Add To Friends
 
-addmodifierfriend.description=Adds the modifier of file to friend list
-addmodifierfriend.key=f
-addmodifierfriend.name=Add file Modifier to Friends
+add_modifier_friend.description=Adds the modifier of file to friend list
+add_modifier_friend.key=f
+add_modifier_friend.name=Add file Modifier to Friends
 
-addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Range
 
 apps.dir.firefox=Firefox
