--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Abandonne la copie en cours
-abortcopy.key=A
-abortcopy.name=Abandon
+abort_copy.description=Abandonne la copie en cours
+abort_copy.key=A
+abort_copy.name=Abandon
 
-abortdownload.description=Abandonne le t\u00E9l\u00E9chargement s\u00E9lectionn\u00E9 et le retire de la file d'attente
-abortdownload.key=A
-abortdownload.name=Abandon
+abort_download.description=Abandonne le t\u00E9l\u00E9chargement s\u00E9lectionn\u00E9 et le retire de la file d'attente
+abort_download.key=A
+abort_download.name=Abandon
 
-aborttransfer.description=Abandonne le transfert s\u00E9lectionn\u00E9
-aborttransfer.key=T
-aborttransfer.name=Abandonne le(s) transfert(s)
+abort_transfer.description=Abandonne le transfert s\u00E9lectionn\u00E9
+abort_transfer.key=T
+abort_transfer.name=Abandonne le(s) transfert(s)
 
 about.description=Informations PowerFolder
 about.dialog.check_for_updates=V\u00E9rifier les mises \u00E0 jour
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=V
 about.dialog.contributers=Contributeurs
 about.dialog.documentation=Documentation
 about.dialog.general_information=Informations Globales
-about.dialog.homepage=Page d'accueil
-about.dialog.power_folder.builddate=Build date\: {0}
-about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.home_page=Page d'accueil
+about.dialog.power_folder.build_date=Build date\: {0}
+about.dialog.power_folder.build_time=Build time\: {0}
 about.dialog.power_folder.max=M\u00E9moire Max\: {0}Mo
 about.dialog.power_folder.text=Version\: {0}
 about.dialog.power_folder.used=M\u00E9moire utilis\u00E9e\: {0}Mo
@@ -51,28 +51,28 @@ about.dialog.team=Equipe
 about.dialog.testers=Testeurs
 about.dialog.title=A propos de PowerFolder
 about.dialog.translators=Traducteurs
-about.dialog.yoursystem.java_version=Version Java\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Ecran\: {0}x{1}
-about.dialog.yoursystem.title=Votre Syst\u00E8me
+about.dialog.your_system.java_version=Version Java\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=Ecran\: {0}x{1}
+about.dialog.your_system.title=Votre Syst\u00E8me
 about.dialog_about_tab=A propos de
 about.dialog_contributers_tab=Equipe
 about.key=D
 about.name=Aide
 
-aboutwebservice.description=Ouvrir le stockage en ligne via votre navigateur par d\u00E9faut
-aboutwebservice.key=A
-aboutwebservice.name=A propos du stockage en ligne
+about_web_service.description=Ouvrir le stockage en ligne via votre navigateur par d\u00E9faut
+about_web_service.key=A
+about_web_service.name=A propos du stockage en ligne
 
-addfriend.description=Ajouter un ami \u00E0 votre liste
-addfriend.key=L
-addfriend.name=Ajouter \u00E0 la liste d'ami(e)s
+add_friend.description=Ajouter un ami \u00E0 votre liste
+add_friend.key=L
+add_friend.name=Ajouter \u00E0 la liste d'ami(e)s
 
-addmodifierfriend.description=Ajouter le modifieur du fichier dans la liste d'ami(e)s
-addmodifierfriend.key=M
-addmodifierfriend.name=Ajouter le modifieur du fichier dans la liste d'ami(e)s
+add_modifier_friend.description=Ajouter le modifieur du fichier dans la liste d'ami(e)s
+add_modifier_friend.key=M
+add_modifier_friend.name=Ajouter le modifieur du fichier dans la liste d'ami(e)s
 
-addressEditor.parseerror=<html>Merci d'indiquer une adresse IP valide pour votre LAN, comme suit\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>Merci d'indiquer une adresse IP valide pour votre LAN, comme suit\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Plage d'adresses
 
 apps.dir.firefox=Firefox
