--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=\u9032\u884C\u4E2D\u306E\u30B3\u30D4\u30FC\u3092\u4E2D\u6B62
-abortcopy.key=A
-abortcopy.name=\u4E2D\u6B62(A)
+abort_copy.description=\u9032\u884C\u4E2D\u306E\u30B3\u30D4\u30FC\u3092\u4E2D\u6B62
+abort_copy.key=A
+abort_copy.name=\u4E2D\u6B62(A)
 
-abortdownload.description=\u9078\u629E\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3092\u4E2D\u6B62\u3057\u3066\u9806\u756A\u5F85\u3061\u304B\u3089\u524A\u9664
-abortdownload.key=A
-abortdownload.name=\u4E2D\u6B62(A)
+abort_download.description=\u9078\u629E\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3092\u4E2D\u6B62\u3057\u3066\u9806\u756A\u5F85\u3061\u304B\u3089\u524A\u9664
+abort_download.key=A
+abort_download.name=\u4E2D\u6B62(A)
 
-aborttransfer.description=\u9078\u629E\u3057\u305F\u8EE2\u9001\u306E\u4E2D\u6B62
-aborttransfer.key=A
-aborttransfer.name=\u8EE2\u9001\u4E2D\u6B62(A)
+abort_transfer.description=\u9078\u629E\u3057\u305F\u8EE2\u9001\u306E\u4E2D\u6B62
+abort_transfer.key=A
+abort_transfer.name=\u8EE2\u9001\u4E2D\u6B62(A)
 
 about.description=PowerFolder \u306B\u95A2\u3059\u308B\u60C5\u5831\u306E\u8868\u793A
 about.dialog.check_for_updates=\u66F4\u65B0\u7248\u30C1\u30A7\u30C3\u30AF(U)
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=\u5354\u529B
 about.dialog.documentation=\u4F7F\u7528\u8AAC\u660E
 about.dialog.general_information=\u5168\u822C\u60C5\u5831
-about.dialog.homepage=\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8
-about.dialog.power_folder.builddate=\u30D3\u30EB\u30C9 \u65E5\u4ED8\: {0}
-about.dialog.power_folder.buildtime=\u30D3\u30EB\u30C9 \u6642\u523B\: {0}
+about.dialog.home_page=\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8
+about.dialog.power_folder.build_date=\u30D3\u30EB\u30C9 \u65E5\u4ED8\: {0}
+about.dialog.power_folder.build_time=\u30D3\u30EB\u30C9 \u6642\u523B\: {0}
 about.dialog.power_folder.max=\u6700\u5927\u30E1\u30E2\u30EA\: {0}MB
 about.dialog.power_folder.text=\u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
 about.dialog.power_folder.used=\u4F7F\u7528\u30E1\u30E2\u30EA\: {0}MB
@@ -51,28 +51,28 @@ about.dialog.team=\u30C1\u30FC\u30E0
 about.dialog.testers=\u52D5\u4F5C\u8A66\u9A13
 about.dialog.title=PowerFolder \u306B\u3064\u3044\u3066
 about.dialog.translators=\u7FFB\u8A33
-about.dialog.yoursystem.java_version=Java \u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
-about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=\u753B\u9762\: {0}x{1}
-about.dialog.yoursystem.title=\u30B7\u30B9\u30C6\u30E0
+about.dialog.your_system.java_version=Java \u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
+about.dialog.your_system.os=OS\: {0}
+about.dialog.your_system.screen=\u753B\u9762\: {0}x{1}
+about.dialog.your_system.title=\u30B7\u30B9\u30C6\u30E0
 about.dialog_about_tab=\u60C5\u5831
 about.dialog_contributers_tab=\u30C1\u30FC\u30E0
 about.key=H
 about.name=\u30D8\u30EB\u30D7(H)
 
-aboutwebservice.description=\u65E2\u5B9A\u306E\u30D6\u30E9\u30A6\u30B6\u3067 Web\u30B5\u30FC\u30D3\u30B9 \u306E Web\u30B5\u30FC\u30D3\u30B9\u9805\u76EE\u3092\u958B\u304F
-aboutwebservice.key=A
-aboutwebservice.name=Web\u30B5\u30FC\u30D3\u30B9(A)
+about_web_service.description=\u65E2\u5B9A\u306E\u30D6\u30E9\u30A6\u30B6\u3067 Web\u30B5\u30FC\u30D3\u30B9 \u306E Web\u30B5\u30FC\u30D3\u30B9\u9805\u76EE\u3092\u958B\u304F
+about_web_service.key=A
+about_web_service.name=Web\u30B5\u30FC\u30D3\u30B9(A)
 
-addfriend.description=\u30E6\u30FC\u30B6\u30FC\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
-addfriend.key=F
-addfriend.name=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0(F)
+add_friend.description=\u30E6\u30FC\u30B6\u30FC\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
+add_friend.key=F
+add_friend.name=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0(F)
 
-addmodifierfriend.description=\u30D5\u30A1\u30A4\u30EB\u306E\u66F4\u65B0\u8005\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
-addmodifierfriend.key=F
-addmodifierfriend.name=\u66F4\u65B0\u8005\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0(F)
+add_modifier_friend.description=\u30D5\u30A1\u30A4\u30EB\u306E\u66F4\u65B0\u8005\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
+add_modifier_friend.key=F
+add_modifier_friend.name=\u66F4\u65B0\u8005\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0(F)
 
-addressEditor.parseerror=<html>LAN \u5185\u3068\u8A8D\u8B58\u3055\u308C\u308B\u3079\u304D IP \u3092\u4EE5\u4E0B\u306E\u6709\u52B9\u306A\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\uFF1A<br>xxx.xxx.xxx.xxx \u307E\u305F\u306F<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>LAN \u5185\u3068\u8A8D\u8B58\u3055\u308C\u308B\u3079\u304D IP \u3092\u4EE5\u4E0B\u306E\u6709\u52B9\u306A\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\uFF1A<br>xxx.xxx.xxx.xxx \u307E\u305F\u306F<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP \u7BC4\u56F2
 
 apps.dir.firefox=Firefox
