--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -19,17 +19,17 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
-abortcopy.key=A
-abortcopy.name=\u041E\u0442\u043C\u0435\u043D\u0430
+abort_copy.description=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
+abort_copy.key=A
+abort_copy.name=\u041E\u0442\u043C\u0435\u043D\u0430
 
-abortdownload.description=\u041E\u0442\u043C\u0435\u043D\u044F\u0435\u0442 \u0432\u044B\u0431\u0440\u0430\u043D\u044B\u0435 \u0437\u0430\u043A\u0430\u0447\u043A\u0438 \u0438 \u0441\u0442\u0438\u0440\u0430\u0435\u0442 \u0438\u0445 \u0438\u0437 \u043E\u0447\u0435\u0440\u0435\u0434\u0438 \u043E\u0436\u0438\u0434\u0430\u043D\u0438\u044F
-abortdownload.key=a
-abortdownload.name=\u041E\u0442\u043C\u0435\u043D\u0430
+abort_download.description=\u041E\u0442\u043C\u0435\u043D\u044F\u0435\u0442 \u0432\u044B\u0431\u0440\u0430\u043D\u044B\u0435 \u0437\u0430\u043A\u0430\u0447\u043A\u0438 \u0438 \u0441\u0442\u0438\u0440\u0430\u0435\u0442 \u0438\u0445 \u0438\u0437 \u043E\u0447\u0435\u0440\u0435\u0434\u0438 \u043E\u0436\u0438\u0434\u0430\u043D\u0438\u044F
+abort_download.key=a
+abort_download.name=\u041E\u0442\u043C\u0435\u043D\u0430
 
-aborttransfer.description=\u041F\u0440\u0435\u0440\u044B\u0432\u0430\u0435\u0442 \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u0443\u044E \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
-aborttransfer.key=a
-aborttransfer.name=\u041F\u0440\u0435\u0440\u0432\u0430\u0442\u044C \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
+abort_transfer.description=\u041F\u0440\u0435\u0440\u044B\u0432\u0430\u0435\u0442 \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u0443\u044E \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
+abort_transfer.key=a
+abort_transfer.name=\u041F\u0440\u0435\u0440\u0432\u0430\u0442\u044C \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
 
 about.description=\u041F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0435\u0442 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E \u043E PowerFolder
 about.dialog.check_for_updates=\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F
@@ -37,9 +37,9 @@ about.dialog.check_for_updates.key=U
 about.dialog.contributers=\u0421\u043E\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044E\u0449\u0438\u0435
 about.dialog.documentation=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044F
 about.dialog.general_information=\u041E\u0441\u043D\u043E\u0432\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
-about.dialog.homepage=Homepage
-about.dialog.power_folder.builddate=\u0414\u0435\u043D\u044C \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
-about.dialog.power_folder.buildtime=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
+about.dialog.home_page=Homepage
+about.dialog.power_folder.build_date=\u0414\u0435\u043D\u044C \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
+about.dialog.power_folder.build_time=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
 about.dialog.power_folder.max=\u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
 about.dialog.power_folder.text=\u0412\u0435\u0440\u0438\u044F\: {0}
 about.dialog.power_folder.used=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u043C\u043E\u0439 \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
@@ -51,28 +51,28 @@ about.dialog.team=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u0438
 about.dialog.testers=\u0422\u0435\u0441\u0442\u0435\u0440\u044B
 about.dialog.title=\u041E PowerFolder
 about.dialog.translators=\u041F\u0435\u0440\u0435\u0432\u043E\u0434\u0447\u0438\u043A\u0438
-about.dialog.yoursystem.java_version=\u0412\u0435\u0440\u0441\u0438\u044F Java \: {0}
-about.dialog.yoursystem.os=\u041E\u0421\: {0}
-about.dialog.yoursystem.screen=\u0414\u0438\u0441\u043F\u043B\u0435\u0439\: {0}x{1}
-about.dialog.yoursystem.title=\u0412\u0430\u0448\u0430 \u0421\u0438\u0441\u0442\u0435\u043C\u0430
+about.dialog.your_system.java_version=\u0412\u0435\u0440\u0441\u0438\u044F Java \: {0}
+about.dialog.your_system.os=\u041E\u0421\: {0}
+about.dialog.your_system.screen=\u0414\u0438\u0441\u043F\u043B\u0435\u0439\: {0}x{1}
+about.dialog.your_system.title=\u0412\u0430\u0448\u0430 \u0421\u0438\u0441\u0442\u0435\u043C\u0430
 about.dialog_about_tab=\u0418\u043D\u0444\u043E
 about.dialog_contributers_tab=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u0438
 about.key=h
 about.name=\u041F\u043E\u043C\u043E\u0449\u044C
 
-aboutwebservice.description=\u041E\u0442\u043A\u0440\u044B\u0432\u0430\u0435\u0442 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u0432 \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0435
-aboutwebservice.key=A
-aboutwebservice.name=\u041E\u0431 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435
+about_web_service.description=\u041E\u0442\u043A\u0440\u044B\u0432\u0430\u0435\u0442 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u0432 \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0435
+about_web_service.key=A
+about_web_service.name=\u041E\u0431 \u041E\u043D\u043B\u0430\u0439\u043D-\u0425\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435
 
-addfriend.description=\u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0434\u0440\u0443\u0437\u0435\u0439
-addfriend.key=f
-addfriend.name=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u0430
+add_friend.description=\u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0434\u0440\u0443\u0437\u0435\u0439
+add_friend.key=f
+add_friend.name=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u0430
 
-addmodifierfriend.description=\u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0435\u0442 \u0432\u043B\u0430\u0434\u0435\u043B\u044C\u0446\u0430 \u0444\u0430\u0439\u043B\u0430 \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0434\u0440\u0443\u0437\u0435\u0439
-addmodifierfriend.key=f
-addmodifierfriend.name=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u0430
+add_modifier_friend.description=\u0414\u043E\u0431\u0430\u0432\u043B\u044F\u0435\u0442 \u0432\u043B\u0430\u0434\u0435\u043B\u044C\u0446\u0430 \u0444\u0430\u0439\u043B\u0430 \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0434\u0440\u0443\u0437\u0435\u0439
+add_modifier_friend.key=f
+add_modifier_friend.name=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u0430
 
-addressEditor.parseerror=<html>\u0412\u0432\u0435\u0434\u0438\u0442\u0435 IP-\u0430\u0434\u0440\u0435\u0441\u0430, \u043D\u0430\u0445\u043E\u0434\u044F\u0449\u0438\u0435\u0441\u044F \u0432 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438 (LAN), \u043D\u0430\u043F\u0440\u0438\u043C\u0435\u0440\:<br>xxx.xxx.xxx.xxx \u0438\u043B\u0438<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.parse_error=<html>\u0412\u0432\u0435\u0434\u0438\u0442\u0435 IP-\u0430\u0434\u0440\u0435\u0441\u0430, \u043D\u0430\u0445\u043E\u0434\u044F\u0449\u0438\u0435\u0441\u044F \u0432 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u043E\u0439 \u0441\u0435\u0442\u0438 (LAN), \u043D\u0430\u043F\u0440\u0438\u043C\u0435\u0440\:<br>xxx.xxx.xxx.xxx \u0438\u043B\u0438<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D
 
 apps.dir.firefox=Firefox
